# bit8tools

./: README.md  pyproject.toml
examples/: demo.py
src/bit8tools/: __init__.py  colors.py  input.py  output.py
test/: test_colors.py  test_input.py  test_output.py
