[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bit8tools"
version = "0.1.0"
description = "Una librería para mejorar la interacción en la consola"
readme = "README.md"
authors = [{ name = "Agustín Comolli", email = "agustincomolli@gmail.com" }]
license = { text = "MIT" }
dependencies = []  # Agrega aquí las dependencias si las hay
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["bit8tools"]
package-dir = { "" = "src" }
